Fix css on dark mode

--- a/src/app/components/common/file_input/file-input.scss
+++ b/src/app/components/common/file_input/file-input.scss
@@ -28,12 +28,14 @@
 
 			font-family: 'Roboto', sans-serif;
 			font-size: 14px;
+			color: var(--text-color-dynamic);
 		}
 
 		> .icon {
 			width: 32px;
 			height: 32px;
 			padding: 4px;
+			fill: var(--text-color-dynamic);
 		}
 	}
 
